Remove log4j dependency